# openfootball

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/migrations/: 000_initial_schema.sql
src-tauri/src/: lib.rs  main.rs
src-tauri/src/core/domain/: mod.rs
src-tauri/src/core/domain/entities/: player.rs
src-tauri/src/core/domain/enums/: mod.rs  position.rs
src-tauri/src/core/domain/enums/errors/: repository_error.rs
src-tauri/src/core/domain/repositories/: player_repository.rs
src-tauri/src/core/domain/value_objects/: mental_attributes.rs  mod.rs  physical_attributes.rs  technical_attributes.rs
src-tauri/src/infrastructure/: database_context.rs  mod.rs
src-tauri/src/infrastructure/persistence/: migrations.rs  mod.rs
src-tauri/src/infrastructure/persistence/models/: mod.rs  player_db.rs
src-tauri/src/infrastructure/persistence/models/attributes/: mental_db.rs  mod.rs  physical_db.rs  technical_db.rs
src-tauri/src/infrastructure/persistence/models/errors/: mapping_error.rs  mod.rs
src-tauri/src/infrastructure/persistence/queries/migrations/: create_table.sql  insert.sql  select.sql
src-tauri/src/infrastructure/persistence/queries/player/: delete.sql  get_by_club.sql  get_by_id.sql  save.sql
src-tauri/src/infrastructure/persistence/repositories/: mod.rs  sqlite_player_repository.rs
src-tauri/tests/: player_repository_test.rs
