[package]
edition = "2021"
version = "0.1.0"
name = "openfootball"
description = "A football management game "
authors = ["Victor Vasconcelos <victorolimpiovasconcelos.dev@gmail.com>"]

[lib]
name = "openfootball_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1.0"
chrono = { version = "0.4.42", features =["serde"] }
rusqlite = { version = "0.37.0", features = ["bundled"] }